# blender-addon-dev-template

./: .gitignore  Cargo.toml  Makefile  README.md  justfile  main.py  pyproject.toml
.github/workflows/: ci.yml
addon_hello_world/: README.md  __init__.py  blender_manifest.toml  hello_operator.py  prefs.py
src/: lib.rs
tests/blender/: test_in_blender.py
tests/unit/: test_hello.py
tools/: build_addon_zip.py  init_from_template.py
