[project]
name = "addon_hello_world"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "fake-bpy-module-latest>=20251003",
    "mypy>=1.18.2",
    "poethepoet>=0.38.0",
    "pytest>=9.0.1",
    "ruff>=0.14.5",
]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["addon_hello_world"]

[tool.poe.tasks]
test = ["unit", "test-blender"]
unit = "pytest"
test-blender = "blender --background --python tests/blender/test_in_blender.py"
